--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "amezan-website",
+	"name": "amezan-website-new",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -15,9 +15,11 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.13",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"tailwindcss": "^3.4.13"
+	}
 }
